force-app/main/default/objects/Diensten__mdt/Diensten__mdt.object-meta.xml
<CustomObject>
    <label>Diensten</label>
    <pluralLabel>Diensten</pluralLabel>
</CustomObject>