force-app/main/default/objects/Diensten__mdt/fields/Actief__c.field-meta.xml
<CustomField>
    <fullName>Actief__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actief</label>
    <type>Checkbox</type>
</CustomField>