force-app/main/default/objects/Diensten__mdt/fields/Standaard_Introductie__c.field-meta.xml
<CustomField>
    <fullName>Standaard_Introductie__c</fullName>
    <label>Standaard Introductie</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>