force-app/main/default/objects/Diensten__mdt/fields/Standaard_Voorwaarden__c.field-meta.xml
<CustomField>
    <fullName>Standaard_Voorwaarden__c</fullName>
    <label>Standaard Voorwaarden</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>